    initial commit
1.0
    fixed bad link generation
    fixed link generator (wrong generation if byte array len not multiply 16)
        # hotfix
    audio decrypter
1.1
    fixed audio decrypter (blowfish every 3-rd chunk)
        # hotfix
    fixed token updating every 1h (like in spotify)
    changelog.txt tracking
1.11
    fixed token update bug
    trying new updating token method(old became deprecated in an hour)
        # hotfix
    fixed isrc search error
    Enum quality-update
1.12